--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": ".",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun run src/server.ts",
+    "prisma:generate": "bunx prisma generate",
+    "prisma:migrate": "bunx prisma migrate dev",
+    "seed": "bun run prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
@@ -15,12 +21,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
+    "openai": "^5.3.0",
     "prisma": "^6.9.0",
     "winston": "^3.17.0",
     "zod": "^3.25.57"
